Whitespace cleanup, logic fixes

--- a/style.css
+++ b/style.css
@@ -104,6 +104,14 @@ button:hover
 	overflow: clip;
 }
 
+#origInfo{
+	position: absolute;
+	text-align: center;
+    left: 0px;
+    width: 50%;
+	line-height: 160%;
+	top: 0px;
+}
 
 #compareBox
 {
@@ -114,6 +122,7 @@ button:hover
 	width: 50%;
 	z-index: 1;	
 	overflow: hide;
+	line-height: 160%;
 }
 
 .slidersBox
